--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 # Chat App 💬
 
-*Chat App* is a dynamic chat application built using the MERN stack, designed to provide an engaging real-time messaging experience with a focus on secure and efficient communication.
+*Chat App* is a dynamic chat application built using the MERN stack, designed to provide an engaging real-time messaging experience focusing on secure and efficient communication.
 
 ## Features
 
